# XplainCore

./: .replit  README.md  main.py  pyproject.toml  test_explainers.py
app/: auth.py  cache.py  config.py  database.py  middleware.py  models.py  monitoring.py  repository.py
app/explainers/: __init__.py  base.py  counterfactual.py  feature_importance.py  lime_explainer.py  shapley.py
app/models/: __init__.py  base.py  schema.py  storage.py
app/routers/: __init__.py  explain.py  health.py  history.py
attached_assets/: Pasted-Here-are-the-priorities-for-further-development-of-the-XAI-service-taking-into-account-high-busines-1741510510571.txt  Pasted-I-want-you-to-Implemented-additional-features-for-the-XAI-service-Improved-the-current-explanation-1741509342157.txt  Pasted-Now-to-make-your-model-universal-and-integrate-all-the-methods-you-need-to-rework-the-structure-of-1741530377258.txt  Pasted-import-time-import-uuid-import-hashlib-import-logging-from-typing-import-Any-Dict-import-requests--1741508143618.txt
